package es.ucab.entrenos.modulos.identidad.modelos;

public class Habilidad {
}
